--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,9 @@ dependencies:
   cupertino_icons: ^1.0.2
   get: ^4.6.5
   provider: ^6.0.3
+  json_serializable: ^6.3.1
+  json_annotation: ^4.6.0
+  build_runner: ^2.2.0
 
 dev_dependencies:
   flutter_test:
