--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,8 +39,10 @@ dependencies:
   json_serializable: ^6.3.1
   json_annotation: ^4.6.0
   build_runner: ^2.2.0
-  connectivity_plus: ^2.3.6
   internet_connection_checker: ^0.0.1+4
+  connectivity_plus: ^2.3.6
+  bloc: ^8.0.3
+  flutter_bloc: ^8.0.1
 
 dev_dependencies:
   flutter_test:
